package fr.ul.acl.escape.monde;

public abstract class Monstre extends Personnage {
    public Monstre(float x, float y, int hauteur, int largeur, float vitesse) {
        super(x, y, hauteur, largeur, vitesse);
    }
}
