package fr.ul.acl.escape.monde;

public enum TypeMouvement {
    RIGHT, LEFT, UP, DOWN
}
