package fr.ul.acl.escape.monde;

public class Walker extends Monstre {

    public Walker(float x, float y, int hauteur, int largeur) {
        super(x, y, hauteur, largeur);
    }

    @Override
    public void deplacer(TypeMouvement typeMouvement) {

    }
}
