@startuml
package Escape{

  package Monde {
    abstract class ElementMonde {
      # float x
      # float y
      # int hauteur
      # int largeur
      ..Constructeur..
      + Monde()

    }
    abstract class Terrain {
      ..Constructeur..
      + Terrain(float x, float y, int hauteur, int largeur)
      ..Méthodes..
      + boolean estTraversable()

    }

    class Mur {
      ..Constructeur..
      + Mur(float x, float y, int hauteur, int largeur)
      ..Méthodes..
      + boolean estTraversable()
    }


    abstract class Personnage {
      # float vitesse
      ..Constructeur..
      + Personnage(int x, int y, int largeur, int hauteur, int vitesse)
      ..Méthodes..
      + void déplacer(TypeMouvement typeMouvement)
      + boolean estUnHeros()
    }

    enum TypeMouvement{
        RIGHT
        LEFT
        TOP
        DOWN
    }

    class Heros {
      ..Constructeur..
      + Heros(int x, int y, int largeur, int hauteur, int vitesse)
      ..Méthodes..
      + boolean estUnHeros()
    }

    abstract class Monstre {
      ..Constructeur..
      + Monstre(int x, int y, int largeur, int hauteur, int vitesse)
    }

    class Walker {
      ..Constructeur..
      + Walker(int x, int y, int largeur, int hauteur, int vitesse)
    }

    class Monde {
      # int nbLigne
      # int nbCol
      ..Constructeur..
      + Monde()
      ..Méthodes..
      + boolean collision(ElementMonde e1, ElementMonde e2)
      + Heros getHeros()
      + void deplacementHeros(TypeMouvement typeMouvement)
      + void addTerrains(Terrain t)
      + void addPersonnage(Personnage p)
      + void updateData()
      + void chargerCarte(String carte)
    }
  }

  class Escape {
    ..Main..
    + {static} void main(String[] args)
    + void start(Stage stage)
  }

  package Outils {
    class Donnees {
        + {static} String GAME_TITLE
        + {static} int WINDOW_DEFAULT_HEIGHT
        + {static} int WINDOW_DEFAULT_WIDTH
        + {static} int WORLD_HEIGHT
        + {static} int WORLD_WIDTH
    }

    class GestionFichier {
        ..Constructeur..
        + GestionFichier()
        ..Méthodes..
        + char[] lireFichierCarte(string nomFichier)
    }

    class Resources {
        - {static} Map<String, Image> assets
        ..Méthodes..
        + {static} URL get(String path)
        + {static} Image getAsset(String path)
    }
  }
}

class Application

Escape.Escape -- "1" Escape.Monde.Monde
Personnage -left-|> ElementMonde
Heros -up-|> Personnage
Monstre -up-|> Personnage
Walker -up-|> Monstre

Terrain -right-|> ElementMonde
Mur -up-|> Terrain
Escape.Escape -up-|> Application


Escape.Monde.Monde -- "*" Personnage
Escape.Monde.Monde -- "*" Terrain


Escape.Monde.Monde -- "1" GestionFichier

' force layout
Resources -[hidden]up-> GestionFichier
GestionFichier -[hidden]up-> Donnees
TypeMouvement -[hidden]right-> Escape.Monde.Monde


@enduml
